# ceur-graph

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
src/ceur_graph/: ceur_dev.py  main.py  wbgenerator.py  wikibase.py
src/ceur_graph/api/: auth.py  ceurws.py  paper_authors.py  paper_reference.py  paper_subject.py  papers.py  scholarlyarticle.py  utils.py  volume.py  volume_editors.py  volume_subject.py  wd_migrate.py
src/ceur_graph/datamodel/: auth.py  editorsignature.py  item.py  paper.py  reference.py  scholarlyarticle.py  scholarsignature.py  subject.py  utils.py  volume.py
src/ceur_graph/resources/migration_profiles/: wd_to_ceur-dev.yaml
src/ceur_graph/resources/queries/: ceur-dev_papers_of_proceedings_by_volume_number.rq  ceur-dev_proceedings_by_volume_number.rq
test/: settings.py  test_ceur_dev.py  test_paper_creation.py
test/api/: test_get_volume_paper_ids.py  test_utils.py
test/datamodel/: test_item.py  test_subject.py
tests/: test_ceur_dev.py  test_paper_creation.py
tests/api/: test_get_volume_paper_ids.py  test_utils.py
tests/datamodel/: test_item.py
