[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "ceur-graph"
version = "0.1.0"
description = "API for ceur graph entities. To add ceur-ws data into the ceur-dev wikibase instance."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "tholzheim", email = "tim.holzheim@rwth-aachen.de" }
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "sparqlwrapper>=2.0.0",
    "wikibaseintegrator>=0.12.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "tox>=4.24.2",
]





[tool.ruff]
# Set the maximum line length to 79.
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # if-else-block-instead-of-if-exp
    "SIM108",
    # nested with statements (not working correctly with nicegui)
    "SIM117"
]
# Allow fix for all enabled rules (when `--fix`) is provided.
#fixable = ["ALL"]


[tool.ruff.format]
# Like Black, automatically detect the appropriate line ending
line-ending = "auto"

[tool.tox]
legacy_tox_ini = """
    [tox]
    env_list = lint, type, py{312, 313}
    minversion = 4.15.0

    [testenv]
    description = run the tests with pytest
    deps =.[dev]
    package = wheel
    wheel_build_env = .pkg
    allowlist_externals =
        scripts/*
        coverage
        pytest
    commands =
        pytest --junitxml=report.xml {tty:--color=yes} {posargs}

    [testenv:coverage]
    description = run terst coverage
    deps =
        .[dev]
    commands =
        pytest --cov --cov-report=xml:coverage-reports/coverage.xml --cov-config=pyproject.toml --cov-branch {tty:--color=yes} {posargs}

    [testenv:format]
    description = install ruff and format the project code
    deps =
        ruff
    commands =
        ruff format

    [testenv:lint]
    description = run linters
    skip_install = true
    deps =
        ruff
    commands =
        ruff check --fix

    [testenv:type]
    description = run type checks
    deps =
        mypy>=1.1
    commands =
        mypy  {posargs:src/ceur_graph}
"""
[tool.mypy]
follow_imports = "skip"
strict_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml","dateutil.parser", "dateutil", "tabulate", "requests"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
pythonpath = [
  "src"
]
asyncio_mode = "auto"
