[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "ceur-graph"
version = "0.1.2"
description = "API for ceur graph entities. To add ceur-ws data into the ceur-dev wikibase instance."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "tholzheim", email = "tim.holzheim@rwth-aachen.de" }
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "sparqlwrapper>=2.0.0",
    "wikibaseintegrator>=0.12.12",
    "pytest-cov>=6.0.0",
    "wikibasemigrator>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "tox>=4.24.2",
    "httpx"
]





[tool.ruff]
# Set the maximum line length to 79.
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # if-else-block-instead-of-if-exp
    "SIM108",
    # nested with statements (not working correctly with nicegui)
    "SIM117"
]
# Allow fix for all enabled rules (when `--fix`) is provided.
#fixable = ["ALL"]


[tool.ruff.format]
# Like Black, automatically detect the appropriate line ending
line-ending = "auto"

[tool.mypy]
follow_imports = "skip"
strict_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml","dateutil.parser", "dateutil", "tabulate", "requests"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
pythonpath = [
  "src"
]
asyncio_mode = "auto"
